fix(footer): logo alignment

--- a/src/components/global/footer/footer.scss
+++ b/src/components/global/footer/footer.scss
@@ -17,7 +17,7 @@
 
   @media (min-width: 42rem) {
     flex-direction: row;
-    // align-items: center;
+    align-items: center;
     gap: 16px;
   }
 }
